# LS-DYNA_tools

./: README.md  pyproject.toml  requirements.txt
configs/: windows_example.yaml
examples/minimal/: README.md
scripts/preprocess/: fem_box_mesh.py  fem_butterfly_mesh_gmsh.py  fem_sphere_generate.py  sph_box_generate.py  sph_geo_generate.py  sph_sphere_generate.py
scripts/run/: run_lsdyna_direct.py
src/lsdyna_py/runner/: cli.py  dyna_direct.py
